--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </div>
 
       <div class="credit">
-        <p>Created by <a href="">afrizalmaulana</a>. | &copy; 2023.</p>
+        <p>Created by <a href="about">afrizalmaulana</a>. | &copy; 2023.</p>
       </div>
     </footer>
     <!-- footer end -->
