--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang Saya</a>
-        <a href="#menu">Tugas</a>
+        <a href="#tugas">Tugas</a>
         <a href="#contact">Kontak</a>
       </div>
 
@@ -141,7 +141,7 @@
       </div>
 
       <div class="credit">
-        <p>Created by <a href="about">afrizalmaulana</a>. | &copy; 2023.</p>
+        <p>Created by <a href="">afrizalmaulana</a>. | &copy; 2023.</p>
       </div>
     </footer>
     <!-- footer end -->
